--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="hydrateRoot"><div><span>LOADING</span></div></div>
+    <div id="renderRoot"><div><span>LOADING</span></div></div>
+    <div id="content"> Content for element outside the root component !</div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
